--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button class="botao">Atualizar meu currículo</button>
  </div>
 </section>
+<h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
 
 
 </body>
